--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.1.9",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
